--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>git</h1>
+      <h1>git- github</h1>
       <span>
         Sistema utilizado para controle de versão open source projetado para
         pequenos e grandes projetos.
